<resources>
    <string name="app_name">My Memories DB</string>
    <string name="new_memory_title_hint">Add Title</string>
    <string name="new_memory_btn_cancel">Cancel</string>
    <string name="new_memory_btn_save">Save</string>
    <string name="activity_main_empty_view_text">Create your first photo memory with the button below.</string>
    <string name="new_memory_btn_gallery">Add a photo from gallery</string>
    <string name="new_memory_btn_camera">Add a photo from camera</string>
</resources>
