<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    
    <ImageView
        android:id="@+id/new_memory_selected_image"
        android:src="@drawable/placeholder"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/new_memory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_memory_title_hint"/>

    <Button
        android:onClick="openGallery"
        android:text="@string/new_memory_btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="openCamera"
        android:text="@string/new_memory_btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/new_memory_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/new_memory_btn_cancel"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="save"
            android:text="@string/new_memory_btn_save"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>